# email-bot

./: .env.example  .gitignore  AGENTS.md  BUGFIX.md  CLAUDE.md  NOTICE  README.en.md  README.md  README.zh.md  ROADMAP.md  SKILL-EN.md  SKILL-en.md  SKILL.md  fhgdad8csnckpqo5ngslsk7ubrsksgmq  final-plan.md  gastown  index.mjs  ktjpcffqor4sbvbsd9senupchc49aqti.darc  manifest  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  register-tools.mjs  skill-creator-plan.md
.beads/: .beads-credential-key  config.yaml  metadata.json
agent/: README.md
config/: policy.default.yaml  routing-rules.yaml  schedules.yaml  weekly-template.md
docs/: CHANGELOG.md  README.md  TODO.md  architecture.md  claude-value-skill-evaluation.md  core-refactor.md  openclaw-progressive-validation-plan.md
integrations/: README.md
openclaw-skill/: DEPLOY.md  README.md  TROUBLESHOOT.md  openclaw.fragment.example.json  prompt-test.md  twinbox-openclaw-bridge.timer
python/: pyproject.toml
python/src/twinbox_core/: __init__.py  artifacts.py  context_builder.py  evaluation.py  orchestration.py  paths.py  phase1_intent.py  phase2_persona.py  phase3_lifecycle.py  phase4_value.py  renderer.py  task_cli.py
python/tests/: test_evaluation.py  test_llm.py  test_paths.py  test_phase1_intent.py  test_phase2_persona.py  test_phase3_lifecycle.py  test_task_cli.py
scripts/: build_go_twinbox.sh  check_env.sh  init_context.sh  install_openclaw_bridge_user_units.sh  install_openclaw_twinbox_init.sh  llm_common.sh  package_vendor_tarball.sh  phase1_incremental.sh  phase1_loading.sh  phase1_mailbox_census.sh  phase1_thinking.sh  phase2_loading.sh  phase2_profile_inference.sh  phase2_thinking.sh  phase3_loading.sh  phase3_thinking.sh  phase4_daily_value_outputs.sh  phase4_gastown.sh  phase4_loading.sh  phase4_merge.sh  phase4_think_brief.sh  phase4_think_sla.sh  phase4_think_urgent.sh  phase4_thinking.sh  twinbox  (+18 more)
(+287 files in other folders)
