[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twinbox-core"
version = "0.1.0"
description = "Shared Python core for twinbox phase builders and runtime contracts."
requires-python = ">=3.11"

[project.scripts]
twinbox-orchestrate = "twinbox_core.orchestration:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
